tests/baselines/reference/nominalTypeMatchingDuplicateDeclarations2.errors.txt
/src/a.ts(5,3): error TS2345: Argument of type 'X' is not assignable to parameter of type 'X'.
  Property 'x' is missing in type 'X'.


==== /node_modules/a/index.d.ts (0 errors) ====
    import X from "x";
    export function a(x: X): void;
    
==== /node_modules/a/node_modules/x/index.d.ts (0 errors) ====
    export default class X {
        protected m(): void;
        private x: number;
    }
    
==== /node_modules/b/index.d.ts (0 errors) ====
    import X from "x";
    export const b: X;
    
==== /node_modules/b/node_modules/x/index.d.ts (0 errors) ====
    export default class X {
        protected m(): void;
        private x: number;
        // OK to provide more members
        private y: number;
    }
    
==== /node_modules/c/index.d.ts (0 errors) ====
    import X from "x";
    export const c: X;
    
==== /node_modules/c/node_modules/x/index.d.ts (0 errors) ====
    export default class X {
        protected m(): void;
        // Not OK to be missing a member
    }
    
==== /src/a.ts (1 errors) ====
    import { a } from "a";
    import { b } from "b";
    import { c } from "c";
    a(b);
    a(c); // Error
      ~
!!! error TS2345: Argument of type 'X' is not assignable to parameter of type 'X'.
!!! error TS2345:   Property 'x' is missing in type 'X'.
    